# Sam3-AN

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
SAM_src/sam3/: model_builder.py
SAM_src/sam3/model/: decoder.py  edt.py  geometry_encoders.py  position_encoding.py  sam3_video_inference.py
SAM_src/sam3/sam/: transformer.py
exports/: coco_exporter.py  export_utils.py  yolo_exporter.py
services/: annotation_manager.py  sam3_service.py
static/css/: style.css
static/js/: annotation.js
templates/: index.html  video.html
tests/: test_stability.py
