[project]
name = "sam3-an"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "decord>=0.6.0 ; sys_platform != 'darwin'",
    "einops>=0.8.2",
    "eva-decord>=0.6.1 ; sys_platform == 'darwin'",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "ftfy==6.1.1",
    "huggingface-hub>=1.24.0",
    "iopath>=0.1.10",
    "numpy==1.26",
    "opencv-python>=4.8.0",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "pillow>=10.0.0",
    "psutil>=7.2.2",
    "pycocotools>=2.0.6",
    "pyyaml>=6.0",
    "regex>=2026.7.10",
    "requests>=2.28.0",
    "timm>=1.0.17",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.68.4",
    "triton-windows>=3.7.1.post27 ; sys_platform == 'win32'",
    "typing-extensions>=4.16.0",
    "ultralytics>=8.4.98",
    "werkzeug>=2.3.0",
]
